--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> weather app</title>
     <!-- link css -->
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
     <!-- google font  -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -48,7 +48,7 @@
     </div>
 
     <!-- link js -->
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
