image path chage

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         </div>
         <div class="weather">
 
-            <img src="/img/weather_icon.png" class="weather_icon" alt="">
+            <img src="./img/weather_icon.png" class="weather_icon" alt="">
 
 
             <h1 class="temp" id="weatherInfo">22&deg;C</h1>
             <h2 class="city" id="cityInput">New york</h2>
             <div class="details">
                 <div class="col">
-                    <img src="/img/wave_icon.png" alt="">
+                    <img src="./img/wave_icon.png" alt="">
                     <div>
                         <p class="humidity">50%</p>
                         <p>humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/img/pngwing.com.png" alt="">
+                    <img src="./img/pngwing.com.png" alt="">
                     <div>
                         <p class="wind ">15 km/h</p>
                         <p>wind speed </p>
