--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="enter city name" spellcheck="false" id="searchBar">
-            <button><span class="material-symbols-outlined " onclick="getWeather()">
+            <button><span class="material-symbols-outlined " onclick="chechWeather()">
                     search
                 </span></button>
         </div>
@@ -45,6 +45,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="better">
+        Made By
+        <a href="https://instagram.com/bloch_navaz?igshid=OGQ5ZDc2ODk2ZA==">Bloch navaj</a>
+
     </div>
 
     <!-- link js -->
