--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="better">
         Made By
         <a href="https://instagram.com/bloch_navaz?igshid=OGQ5ZDc2ODk2ZA==">Bloch navaj</a>
-
+        <!-- <div class="better">Using API</div> -->
     </div>
 
     <!-- link js -->
